--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade poetry
+        poetry lock
         poetry install --with dev, test
     - name: Lint with flake8
       run: |
@@ -37,5 +38,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        poetry lock
         poetry install --with test
         poetry run pytest
