--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade poetry
         poetry lock
-        poetry install --with dev, test
+        poetry install --with "dev,test"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
